--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -119,3 +119,10 @@
     flex-direction: column;
   }
 }
+
+.products {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+}
